welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:2: error: value || is not a member of (Int, Boolean)
	if ((0,true) || (6,true)) { 
                     ^alarmClock:2: error: type mismatch;
 found   : Unit
 required: String
	if ((0,true) || (6,true)) { 
        ^