welcome.lessons.welcome.bat.bool2.AlarmClock.scala.code
def alarmClock(day:Int, vacation:Boolean): String = {
	if ((0,true) || (6,true)) { 
		return "off" 
	}
}
